# axum-api-testing-example

./: Cargo.toml  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: merge_dependency_updates.yml  run_tests.yml
src/: lib.rs  types.rs
tests/: dogs.rs  generic.rs  testing_utilities.rs  todos.rs
tests/testing_utilities/: api_endpoint.rs  mod.rs  testing_app.rs
