[package]
name = "rust-end-to-end-testing-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.4"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["full"] }
mime = "0.3.16"
rstest = "0.25.0"
rstest_reuse = "0.7.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tower = "0.5.2"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
