[package]
name = "rust-end-to-end-testing-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.6"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["full"] }
mime = "0.3.16"
rstest = "0.26.1"
rstest_reuse = "0.7.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
